@@ -23,6 +23,13 @@
 #include <config.h>
 #endif
 
+#include <glib.h>
+
+#ifdef G_OS_WIN32
+#include <fcntl.h>
+#include <io.h>
+#endif
+
 #include <errno.h>
 
 #include "gmime-stream-file.h"
@@ -149,20 +156,8 @@ stream_read (GMimeStream *stream, char *buf, size_t len)
 	/* make sure we are at the right position */
 	fseek (fstream->fp, (long) stream->position, SEEK_SET);
 	
-	if ((nread = fread (buf, 1, len, fstream->fp)) > 0) {
-#ifdef G_OS_WIN32
-		/* fucking Windows... sigh. Since it might decide to translate \r\n into \n,
-		 * we need to query the real position rather than using simple math. */
-		long pos;
-		
-		if ((pos = ftell (fstream->fp)) == -1)
-			stream->position += nread;
-		else
-			stream->position = pos;
-#else
+	if ((nread = fread (buf, 1, len, fstream->fp)) > 0)
 		stream->position += nread;
-#endif
-	}
 	
 	return (ssize_t) nread;
 }
@@ -189,20 +184,8 @@ stream_write (GMimeStream *stream, const char *buf, size_t len)
 	/* make sure we are at the right position */
 	fseek (fstream->fp, (long) stream->position, SEEK_SET);
 
-	if ((nwritten = fwrite (buf, 1, len, fstream->fp)) > 0) {
-#ifdef G_OS_WIN32
-		/* fucking Windows... sigh. Since it might decide to translate \n into \r\n,
-		 * we need to query the real position rather than using simple math. */
-		long pos;
-		
-		if ((pos = ftell (fstream->fp)) == -1)
-			stream->position += nwritten;
-		else
-			stream->position = pos;
-#else
+	if ((nwritten = fwrite (buf, 1, len, fstream->fp)) > 0)
 		stream->position += nwritten;
-#endif
-	}
 	
 	return (ssize_t) nwritten;
 }
@@ -388,6 +371,10 @@ g_mime_stream_file_new (FILE *fp)
 	GMimeStreamFile *fstream;
 	gint64 start;
 	
+#ifdef G_OS_WIN32
+	_setmode (_fileno (fp), O_BINARY);
+#endif
+	
 	if ((start = ftell (fp)) == -1)
 		start = 0;
 	
@@ -418,6 +405,10 @@ GMimeStream *
 g_mime_stream_file_new_with_bounds (FILE *fp, gint64 start, gint64 end)
 {
 	GMimeStreamFile *fstream;
+	
+#ifdef G_OS_WIN32
+	_setmode (_fileno (fp), O_BINARY);
+#endif
 	
 	fstream = g_object_newv (GMIME_TYPE_STREAM_FILE, 0, NULL);
 	g_mime_stream_construct (GMIME_STREAM (fstream), start, end);
